<resources>
    <string name="app_name">My Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="kerakli_tilni_qidiring">Kerakli tilni qidiring ...</string>
    <string name="bosh_sahifa">Bosh sahifa</string>
    <string name="kitob_yoki_muallifni_qidiring">Kitob yoki muallifni qidiring ...</string>
    <string name="romanlar">Romanlar</string>
    <string name="darsliklar">Darsliklar</string>
    <string name="o_tkir_hoshimovning_bahor_qaytmaydi_asari">O\'tkir Hoshimovning \'Bahor qaytmaydi\' asari</string>
    <string name="kitoblarni_qidiring">Kitoblarni qidiring</string>
    <string name="rossiya_va_xitoy_yaqinlashuvi_kim_n_nimadan_manfaatdor">Rossiya va Xitoy yaqinlashuvi: kim \n nimadan manfaatdor?</string>
    <string name="eng_so_ngi_maqolalar">Eng so\'ngi maqolalar</string>
    <string name="batafsil">Batafsil</string>
    <string name="tavsifi">Tavsifi</string>
    <string name="sharhlar">Sharhlar</string>
    <string name="iqtiboslar">Iqtiboslar</string>
    <string name="text1">Modomiki, biz yangi davrga oyoq qo‘ydik, bas, biz har bir yo‘sunda ham shu yangi davrning yangiliklari ketidan ergashamiz va shunga o‘xshash dostonchiliq, ro‘monchiliq va hikoyachiliqlarda ham yangarishg‘a, xalqimizni shu zamonning «Tohir-Zuhra»lari, «Chor darvesh»lari, «Farhod-Shirin» va «Bahromgo‘r»lari bilan tanishdirishka o‘zimizda majburiyat his etamiz. Yozmoqqa niyatlanganim ushbu — «O‘tkan kunlar», yangi zamon ro‘monchilig‘i bilan tanishish yo‘lida kichkina bir tajriba, yana to‘g‘risi, bir havasdir. Ma’lumki, har bir ishning ham yangi — ibtidoiy davrida talay kamchilik-lar bilan maydong‘a chiqishi, ahllarining yetishmaklari ila sekin-sekin tuzalib, takomulga yuz tutishi tabiiy bir holdir. Mana shuning daldasida havasimda jasorat etdim, havaskorlik orqasida kechaturgan qusur va xatolardan cho‘chib turmadim. Moziyg‘a qaytib ish ko‘rish xayrlik, deydilar. Shunga ko‘ra mavzu’ni moziydan, yaqin o‘tkan kunlardan, tari-ximizning eng kirlik, qora kunlari bo‘lg‘an keyingi «xon zamonlari»dan belguladim.</string>
    <string name="asosiy">Asosiy</string>
    <string name="qidiruv">Qidiruv</string>
    <string name="maqolalar">Maqolalar</string>
    <string name="saqlanganlar">Saqlanganlar</string>
    <string name="tilni_o_zgartirish">Tilni o\'zgartirish</string>
    <string name="ijtimoiy">Ijtimoiy</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instagram</string>
    <string name="ulashish">Ulashish</string>
    <string name="bizga_baho_bering">Bizga baho bering</string>
    <string name="account">Account</string>
    <string name="hisobdan_chiqish">Hisobdan chiqish</string>
    <string name="familiya">Familiya</string>
    <string name="ism">Ism</string>
    <string name="email">Email</string>
    <string name="parol">Parol</string>
    <string name="parolni_takrorlang">Parolni takrorlang</string>
    <string name="iltimos_kutib_turing">Iltimos kutib turing …</string>
    <string name="tanlangan_kitoblar_yo_q">Tanlangan kitoblar yo\'q !</string>
</resources>